# goya-on-windows

./: .gitignore  CLAUDE.md  README.md
docs/: init-sequence.md  linux-driver-notes.md  register-map.md
driver/: CMakeLists.txt  README.md  admin_install.bat  build.bat  export_cert.ps1  goya_bar.c  goya_bar.h  goya_bar.inf  goya_bar.vcxproj  install.ps1  sign.ps1
scripts/: build_and_install.ps1  get_pci_resources.ps1
src/goya/: __init__.py  __main__.py  device.py  firmware.py  init.py  packets.py  pci.py  pci_config.py  probe.py  regs.py
tests/: test_firmware.py  test_init_device.py  test_packets.py  test_regs.py
